Add better favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ryans' Organic Farm - Fresh Sheep & Vegetables</title>
     <link href="./css/output.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="img/favicon.jpg">
+    <link rel="icon" type="image/png" href="img/favicon.png">
   </head>
   <body class="bg-yellow-50 min-h-screen">
     <!-- Header -->
